# kasa-defteri

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/kasa_defteri/: __init__.py  database.py  efatura_import.py  gui.py  models.py  reports.py  webapp.py
src/kasa_defteri/templates/: base.html  defter.html  efatura.html  firmalar.html  raporlar.html  yeni_kayit.html
tests/: conftest.py  test_database.py  test_efatura_import.py  test_reports.py  test_webapp.py
tests/fixtures/: bozuk_fatura.xml  ornek_fatura_1.xml  ornek_fatura_2.xml
