[project]
name = "kasa-defteri"
version = "0.1.0"
description = "Gelir/gider takibi yapan, GİB e-fatura XML içe aktarabilen basit bir kasa defteri uygulaması."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
kasa-defteri = "kasa_defteri.gui:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
